[build-system]
requires = ["hatchling >=1.9.0, <2"]
build-backend = "hatchling.build"

[project]
name = "yt-dont-lock-p"
description = "Plugin to apply a wake lock during yt-dlp execution"
authors = [{name = "Simon Sawicki", email = "contact@grub4k.xyz"}]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
	"wakepy >=0.7.2, <0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]

[tool.hatch.envs.default]
dependencies = [
	"ruff ==0.2.1",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check {args:--fix .}"
format = "ruff format {args:.}"

[tool.hatch.envs.ci]
template = "default"
skip-install = true

[tool.hatch.envs.ci.scripts]
lint = "ruff check {args:--no-fix --output-format github .}"
format = "ruff format {args:--check .}"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
	"A",
	"C",
	"E",
	"F",
	"I",
	"PIE",
	"PTH",
	"RET",
	"RSE",
	"RUF",
	"TCH",
	"TID",
	"W",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
force-single-line = true
