[build-system]
requires = ["hatchling >=1.9.0, <2", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "yt-dont-lock-p"
description = "Plugin to apply a wake lock during yt-dlp execution"
authors = [{name = "Simon Sawicki", email = "contact@grub4k.dev"}]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
license = {file = "LICENSE"}
dependencies = [
	"wakepy==0.10.*",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "yt_dlp_plugins/postprocessor/yt_dont_lock_p/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["yt_dlp_plugins"]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.hatch-static-analysis]
installer = "uv"
dependencies = ["ruff==0.11.*"]
config-path = "pyproject.toml"

[tool.ruff.lint]
select = [
	"A",
	"C",
	"E",
	"F",
	"I",
	"PIE",
	"PLC",
	"PLE",
	"PLW",
	"PTH",
	"PYI",
	"RET",
	"RSE",
	"RUF",
	"SIM",
	"TC",
	"TD",
	"TID",
	"W",
]
ignore = [
	"TD003",
	"E402",
	"E501",
	"PLR09",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
force-single-line = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
